--- a/ss8_cau_lenh_dieu_kien/demo2.html
+++ b/ss8_cau_lenh_dieu_kien/demo2.html
@@ -26,8 +26,8 @@
         case 11:
             console.log("thang co 30 ngay");
             break;
-        // default:
-        //     console.log("day kp la thang trong nam");
+        default:
+            console.log("day kp la thang trong nam");
     }
     console.log("ket thuc ctrinh");
 </script>
