--- a/ss8_cau_lenh_dieu_kien/demo2.html
+++ b/ss8_cau_lenh_dieu_kien/demo2.html
@@ -5,9 +5,14 @@
     <title>Title</title>
 </head>
 <body>
+<input type="number" id="month" placeholder="Mời nhập tháng" >
+<button onclick="check()"> Kiểm tra số ngày</button>
+
+<p id="result"> Hiển thị kết quả tại đây </p>
 <script>
-    let month = prompt("nhap thang");
-    switch (month){
+    function check() {
+    let month = Number(document.getElementById("month").value);
+    switch (month) {
         case 1:
         case 3:
         case 5:
@@ -15,21 +20,21 @@
         case 8:
         case 10:
         case 12:
-            console.log("thang co 31 ngay");
+            document.getElementById("result").innerHTML = "thang" + month+"co 31 ngay";
             break;
         case 2:
-            console.log("thang cos 28 hoac 29 ngay");
+            document.getElementById("result").innerHTML = "thang" + month+"co 28 hoac 29 ngay";
             break;
         case 4:
         case 6:
         case 9:
         case 11:
-            console.log("thang co 30 ngay");
+            document.getElementById("result").innerHTML = "thang" + month+"co 30 ngay";
             break;
         default:
-            console.log("day kp la thang trong nam");
+            alert("day kp la thang trong nam");
+         }
     }
-    console.log("ket thuc ctrinh");
 </script>
 </body>
 </html>
