--- a/ss10_loop/bai_tap/bai_6.html
+++ b/ss10_loop/bai_tap/bai_6.html
@@ -1,21 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+  <meta charset="UTF-8">
+  <title>$Title$</title>
 </head>
 <body>
-<script>
-  let count = 0, tongSo =0, a = " ";
-  for (let i=1;count !== 30; i++) {
-      if (i % 7 === 0) {
-          a += i + " ";
-          tongSo += i;
-          count++;
-      }
-  }
-  document.write("day so: " +a + "<br>");
-  document.write("Tổng bằng "+tongSo);
-</script>
+$END$
 </body>
 </html>
