--- a/ss11_loop/bai_1.html
+++ b/ss11_loop/bai_1.html
@@ -5,6 +5,16 @@
   <title>$Title$</title>
 </head>
 <body>
-$END$
+<script>
+  let F0 = 0, F1 = 1, F;
+  let fibonacci = F0 + " " + F1 + " ";
+  for (let i = 2; i < 20; i++) {
+    F = F0 + F1;
+    F0 = F1;
+    F1 = F;
+    fibonacci += F + " ";
+  }
+  document.write(fibonacci);
+</script>
 </body>
 </html>
