--- a/ss17_oop/congtac_bongden.html
+++ b/ss17_oop/congtac_bongden.html
@@ -1,10 +1,61 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <title>Title</title>
 </head>
 <body>
-$END$
+<script>
+    class Lamp {
+        constructor() {
+            this.lampStatus =false;
+        }
+        turnOn(){
+            this.lampStatus = true;
+        }
+        turnOff(){
+            this.lampStatus = false;
+        }
+    }
+
+    class Switch {
+        constructor() {
+            this.switchStatus =false;
+            this.lamp = null;
+        }
+        connectLamp(lamp){
+            this.lamp = lamp;
+        }
+        switchOn(){
+            if (this.lamp==null){
+                console.log("chưa kết nối")
+            }else {
+                this.switchStatus = true;
+                this.lamp.turnOn();
+            }
+
+        }
+        switchOff(){
+            if (this.lamp==null){
+                console.log("chưa kết nối")
+            }else {
+                this.switchStatus = false;
+                this.lamp.turnOff();
+            }
+
+        }
+    }
+
+    let bongDen = new Lamp();
+    let congTac = new Switch();
+    // truyền tham chiếu
+    congTac.connectLamp(bongDen);
+    console.log("-----------------bất công tác -----------")
+    congTac.switchOn();
+    console.log(bongDen.lampStatus);
+    console.log("-----------------tắt công tác -----------")
+    congTac.switchOff();
+    console.log(bongDen.lampStatus)
+</script>
 </body>
 </html>
