--- a/ss17_oop/adam_eva.html
+++ b/ss17_oop/adam_eva.html
@@ -6,69 +6,80 @@
 </head>
 <body>
 <script>
-    class Apple {
-        constructor(weight) {
-            this.weight = weight;
+    class Apple{
+        constructor() {
+            this.weight = 10;
         }
-        setWeight(weight) {
-            this.weight = weight;
-        }
-        getWeight() {
-            return this.weight;
-        }
-    }
-    class Human {
-        constructor(name, gender, weight) {
-            this.name =name;
-            this.gender = gender;
-            this.weight = weight;
-            this.say(this.name + " đã được tạo ra với cân nặng " + this.weight + "kg.");
-        }
-        setName(name) {
-            this.name = name;
-        }
-        getName() {
-            return this.name;
-        }
-        setGender(gender) {
-            this.gender = gender;
-        }
-        getGender() {
-            return this.gender;
-        }
-        setWeight(weight) {
-            this.weight = weight;
-        }
-        getWeight() {
-            return this.weight;
-        }
-        say(message) {
-            console.log(message);
-        }
-        check(apple) {
-            console.log("Khối lượng quả táo là: " + apple.weight)
-        }
-        eat(apple) {
-            if(apple.weight >= 1) {
-                this.say(this.name + " sẽ ăn táo");
-                this.weight += 1;
-                apple.weight -= 1;
-            }else {
-                this.say("Táo đã hết, không thể ăn thêm!");
+        decrease(){
+            if (this.weight>0){
+                this.weight --;
             }
         }
-
+        isEmpty(){
+            if(this.weight==0){
+                return true;
+            }
+            return false;
+        }
+        getWeight(){
+            return this.weight;
+        }
     }
-    let apple = new Apple(10);
-    let human1 = new Human("Thái", "nam", 50);
-    let human2 = new Human("Nguyên", "nữ", 40);
 
-    human1.eat(apple);
-    human2.eat(apple);
+    class Human{
+        constructor(name,gender,weight) {
+            this.name = name;
+            this.gender = gender;
+            this.weight = weight;
+        }
+        getGender(){
+            return this.gender
+        }
+        setGender(gender){
+            this.gender = gender;
+        }
+        checkApple(tao){
+            // return !tao.isEmpty()
+            if (tao.isEmpty()){
+                return false;
+            }
+            return true;
+        }
+        eatApple(tao){
+            if (this.checkApple(tao)){
+                this.weight++;
+                tao.decrease();
+            }else {
+                console.log(this.name+ ": Hết táo rồi")
+            }
+        }
+        say(message){
+            console.log(this.name + ": "+ message)
+        }
+    }
 
-    console.log(" Cân nặng của " + human1.name + " giới tính " + human1.gender + " sau khi ăn táo là: " + human1.weight);
-    console.log(" Cân nặng của " + human2.name + " giới tính " + human2.gender + " sau khi ăn táo là: " + human2.weight);
-    console.log(" Trong lượng của táo còn lại sau khi bị ăn: " + apple.weight);
+    let tao = new Apple();
+    let adam = new Human("ADAM", true,50);
+    let eva = new Human("EVA", false,40);
+
+    adam.say("Em ăn táo đi");
+    eva.say("Em không đói bụng");
+    adam.say("Em không ăn thì anh ăn vậy");
+    adam.eatApple(tao);
+    adam.say("NGon lắm, em ăn đi");
+    eva.eatApple(tao);
+    eva.eatApple(tao);
+    eva.eatApple(tao);
+    eva.eatApple(tao);
+    eva.eatApple(tao);
+    eva.eatApple(tao);
+    eva.eatApple(tao);
+    eva.eatApple(tao);
+    eva.eatApple(tao);
+    adam.eatApple(tao);
+    console.log(adam.weight)
+    console.log(eva.weight)
+    console.log(tao.getWeight())
 </script>
 </body>
 </html>
