--- a/ss18_case_study/bai_12.html
+++ b/ss18_case_study/bai_12.html
@@ -71,7 +71,7 @@
 
     function display() {
         let tableHTML = `
-                <table border="1">
+                <table border="1" style="border-collapse: collapse">
                     <tr>
                         <th>STT</th>
                         <th>Mã học viên</th>
